--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 	</div>
 	<div class="scrollbar"></div>
 
+	<div class="container">
+		<div class="scroller">
+			<div class="content"></div>
+		</div>
+		<div class="scrollbar"></div>
+	</div>
+
 	<script src="main.js"></script>
 </body>
 </html>
